{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 62,
  "lineage": "a24940f3-1b7d-bb7a-fc2a-8d033aa7b742",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09172651bfede675c",
            "domain": "vpc",
            "id": "eipalloc-09172651bfede675c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-13-58-20-83.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.20.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_nat_eip"
            },
            "tags_all": {
              "Name": "demo_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:109106954009:internet-gateway/igw-0264a49c0a37669c8",
            "id": "igw-0264a49c0a37669c8",
            "owner_id": "109106954009",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0b57cca2442e49129"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09172651bfede675c",
            "connectivity_type": "public",
            "id": "nat-08efcd75362e3dcff",
            "network_interface_id": "eni-056cfbb9dd67fe4ef",
            "private_ip": "10.0.2.174",
            "public_ip": "13.58.20.83",
            "subnet_id": "subnet-06947b1ad8bc3b998",
            "tags": {
              "Name": "demo Natgateway"
            },
            "tags_all": {
              "Name": "demo Natgateway"
            }
          },
          "dependencies": [
            "aws_eip.demo_nat_eip",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:109106954009:route-table/rtb-02182882df9ee2644",
            "id": "rtb-02182882df9ee2644",
            "owner_id": "109106954009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08efcd75362e3dcff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-private-rt"
            },
            "tags_all": {
              "Name": "demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b57cca2442e49129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.demo_nat_eip",
            "aws_nat_gateway.demo_natgateway",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:109106954009:route-table/rtb-0bc4d367818162dd6",
            "id": "rtb-0bc4d367818162dd6",
            "owner_id": "109106954009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0264a49c0a37669c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-rt"
            },
            "tags_all": {
              "Name": "demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b57cca2442e49129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-private-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073464b4497add363",
            "route_table_id": "rtb-02182882df9ee2644",
            "subnet_id": "subnet-0d29da83378ba0da2"
          },
          "dependencies": [
            "aws_eip.demo_nat_eip",
            "aws_nat_gateway.demo_natgateway",
            "aws_route_table.demo_private_rt",
            "aws_subnet.demo_private_subnet",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0742e55a027578c74",
            "route_table_id": "rtb-0bc4d367818162dd6",
            "subnet_id": "subnet-06947b1ad8bc3b998"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.demo_public_rt",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:109106954009:subnet/subnet-0d29da83378ba0da2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d29da83378ba0da2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "109106954009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sub_private"
            },
            "tags_all": {
              "Name": "demo_sub_private"
            },
            "vpc_id": "vpc-0b57cca2442e49129"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:109106954009:subnet/subnet-06947b1ad8bc3b998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06947b1ad8bc3b998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "109106954009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sub_public"
            },
            "tags_all": {
              "Name": "demo_sub_public"
            },
            "vpc_id": "vpc-0b57cca2442e49129"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:109106954009:vpc/vpc-0b57cca2442e49129",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c816c7cdd92f143",
            "default_route_table_id": "rtb-01a76dd17e752ed93",
            "default_security_group_id": "sg-07f29097995dc0d8d",
            "dhcp_options_id": "dopt-0b4032947f9bf97bd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b57cca2442e49129",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a76dd17e752ed93",
            "owner_id": "109106954009",
            "tags": {
              "name": "demovpc"
            },
            "tags_all": {
              "name": "demovpc"
            }
          }
        }
      ]
    }
  ]
}